fix: header on mobile

--- a/style/main.css
+++ b/style/main.css
@@ -49,6 +49,13 @@ a:hover {
   color: #fff;
 }
 
+.buttons {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  padding: 10px;
+}
+
 /* Main Game */
 .main-game {
   font-size: 16px;
@@ -142,7 +149,7 @@ a:hover {
 
 .description {
   margin-top: 10px;
-  margin-bottom: 60px;
+  margin-bottom: 20px;
 }
 
 .title {
@@ -156,7 +163,7 @@ a:hover {
   border: none;
   color: white;
 
-  padding: 15px 30px;
+  padding: 15px 15px;
   margin-right: 15px;
   font-size: 12px;
 
